Cleanup and tweaks

--- a/profile.html
+++ b/profile.html
@@ -12,13 +12,13 @@
 		</h6>
 
 		<div class="summary-item">
-			<h3 id="summary-list-label">Key Professional Highlights</h3>
+			<h3 id="summary-list-label">Key Highlights</h3>
 			<ul aria-labelledby="summary-list-label">
 				<li>
-					Demonstrated leadership managing an average of 5 concurrent projects with
-					cross-functional teams of 5-15 members. Successfully
-					executed roles in project management, creative direction, and
-					technical leadership across enterprise-scale initiatives.
+					Demonstrated leadership managing an average of 5 concurrent projects
+					with cross-functional teams of 5-15 members. Successfully executed
+					roles in project management, creative direction, and technical
+					leadership across enterprise-scale initiatives.
 				</li>
 				<li>
 					Led design strategy for enterprise healthcare, logistics, and GIS
@@ -29,21 +29,25 @@
 					Established design systems and UI component libraries that reduce
 					development time by 50% while ensuring consistent user experiences.
 				</li>
-                <li>
-                    Expert in information architecture (IA), user research, journey mapping, usability testing, and working within Agile environments.
-                </li>
 				<li>
-					Technical proficiency in HTML, CSS, JavaScript, React, Angular, and Flutter, enabling effective product and engineering team collaboration.
+					Expert in information architecture (IA), user research, journey
+					mapping, usability testing, and working within Agile environments.
 				</li>
 				<li>
-					Skilled in web technologies and design tools (Figma, Adobe Creative Suite).
+					Technical proficiency in HTML, CSS, JavaScript, React, Angular, and
+					Flutter, enabling effective product and engineering team
+					collaboration.
+				</li>
+				<li>
+					Skilled in web technologies and design tools (Figma, Adobe Creative
+					Suite).
 				</li>
 			</ul>
 		</div>
 	</section>
 
 	<section class="project-section">
-		<h2>Professional Experience</h2>
+		<h2>Experience</h2>
 
 		<div class="experience-item">
 			<h3><span class="company-logo">GPC</span>GP Creative, LLC</h3>
@@ -269,6 +273,7 @@
 		</div>
 	</section>
 
+	<section>
 		<ul class="skills-list">
 			<li>Product Design</li>
 			<li>User Experience Design (UED)</li>
@@ -283,8 +288,6 @@
 			<li>Web Technologies (HTML, CSS, JavaScript)</li>
 			<li>Frameworks: React, Angular, Flutter</li>
 			<li>Design Tools: Figma, Adobe Creative Suite</li>
-		</ul>
-			<li>Flutter</li>
 		</ul>
 	</section>
 
