--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
 				</li>
 				<li>
 					Skilled in web technologies and design tools (Figma, Adobe Creative
-					Suite).
+					Suite tools).
 				</li>
 			</ul>
 		</div>
@@ -273,21 +273,23 @@
 		</div>
 	</section>
 
-	<section>
+	<section style="padding-top: var(--space-xxl)">
 		<ul class="skills-list">
 			<li>Product Design</li>
-			<li>User Experience Design (UED)</li>
+			<li>User Experience (UX) Design</li>
 			<li>User Interface Design</li>
 			<li>Interaction Design</li>
-			<li>Mobile Application Design</li>
-			<li>Design Systems</li>
-			<li>Accessibility (a11y)</li>
 			<li>Visual Design</li>
+			<li>Design Systems</li>
+			<li>Accessibility (WCAG, a11y)</li>
+			<li>Mobile Application Design</li>
 			<li>Prototyping</li>
-			<li>Cross-functional Team Leadership</li>
+			<li>2D and 3D Animation</li>
+			<li>Storyboarding</li>
 			<li>Web Technologies (HTML, CSS, JavaScript)</li>
-			<li>Frameworks: React, Angular, Flutter</li>
-			<li>Design Tools: Figma, Adobe Creative Suite</li>
+			<li>Frameworks/Libraries: React, Angular, Flutter</li>
+			<li>Design Tools: Figma, Adobe Photoshop, Illustrator, XD</li>
+			<li>Cross-functional Team Leadership</li>
 		</ul>
 	</section>
 
