Manual adjustments for the purpose of exporting PDF versions of pages

--- a/community-engagement.html
+++ b/community-engagement.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<article class="project">
+<article
+	class="project"
+	style="padding-top: var(--space-xxl)"
+>
 	<section class="project-intro">
 		<h2>Community Engagement</h2>
 		<h5>
@@ -13,6 +16,7 @@
 			src="./images/gc-connect/main.png"
 			alt="CommunityView Screenshot"
 			class="lightbox-trigger"
+			style="max-width: 40%"
 		/>
 		<div class="project-description">
 			<span>
@@ -55,7 +59,10 @@
 			Low-fidelity wireframes for "New Report" workflow
 		</h6>
 	</div>
-	<div class="project-image">
+	<div
+		class="project-image"
+		style="page-break-after: always"
+	>
 		<img
 			src="./images/gc-connect/lofi-2.png"
 			alt="Lo Fidelity 2 Screenshot"
@@ -66,7 +73,10 @@
 			Low-fidelity wireframes for "View/Edit Reports" workflow
 		</h6>
 	</div>
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="padding-top: var(--space-xxl)"
+	>
 		<h5>
 			Final screens were created in Photoshop. Image assets and reference were
 			provided to a lead developer for assembly using XCode and PhoneGap.
