--- a/healthcare.html
+++ b/healthcare.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<article class="project">
+<article
+	class="project"
+	style="padding-top: var(--space-xxl)"
+>
 	<section class="project-intro">
 		<h2>Healthcare</h2>
 		<h5>
@@ -59,14 +62,17 @@
 			</h6>
 		</div>
 	</div>
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="page-break-after: always"
+	>
 		<h3>Business Operations</h3>
-		<h5>
+		<h5 style="page-break-after: always">
 			In addition to providing caregivers a means to manage their schedules and
 			tasks, an operational platform was needed to streamline communication and
 			coordination between caregivers, clients, and administrative staff.
 		</h5>
-		<h5>
+		<h5 style="padding-top: var(--space-xxl)">
 			I designed a platform to manage client needs, caregiver performance,
 			scheduling, task tracking, financials and communication across all roles.
 		</h5>
@@ -96,7 +102,10 @@
 		</div>
 	</section>
 
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="page-break-after: always; padding-top: var(--space-xxl)"
+	>
 		<h3>Addressing Efficiency</h3>
 		<h5>
 			Home healthcare agencies must coordinate multiple complex operations and
@@ -134,7 +143,10 @@
 			<h6 class="is-centered"> Staff Replacement (Angular) </h6>
 		</div>
 	</section>
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="padding-top: var(--space-xxl)"
+	>
 		<h3>What I Learned</h3>
 		<h5>
 			Understanding business needs, managing requirements, testing, and
