--- a/logistics.html
+++ b/logistics.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<article class="project">
+<article
+	class="project"
+	style="padding-top: var(--space-xxl)"
+>
 	<section class="project-intro">
 		<h2>Logistics</h2>
 		<h5>
@@ -16,7 +19,10 @@
 			veneer.
 		</h5>
 	</section>
-	<div class="project-header">
+	<div
+		class="project-header"
+		style="page-break-after: always"
+	>
 		<div class="project-image">
 			<img
 				src="./images/logistics/logistics-header.png"
@@ -61,7 +67,10 @@
 			</h6>
 		</div>
 	</div>
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="padding-top: var(--space-xxl); page-break-after: always"
+	>
 		<h3>What The Heck Is 'Reverse' Logistics?</h3>
 		<h5>
 			While still hard at work on our healthcare platform, our team had the
@@ -96,7 +105,7 @@
 			apply our healthcare platform's principles toward resource management to
 			create a more cohesive solution for their logistics operations.
 		</h5>
-		<h5>
+		<h5 style="page-break-after: always">
 			Over the next few months, we worked with the client to build a simpler
 			system that solved their main problems. We created one central place to
 			track their inventory in real-time, and made it easy for workers to log
@@ -104,11 +113,15 @@
 			dataset resulted in bills of lading that were accurate, restoring the
 			client's trust in the final invoice.
 		</h5>
-		<div class="project-image">
+		<div
+			class="project-image"
+			style="padding-top: var(--space-xxl)"
+		>
 			<img
 				src="./images/logistics/hypervisor-mobile.png"
 				alt="Hypervisor Mobile Screenshots"
 				class="lightbox-trigger"
+				style="width: 90%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> Mobile App - (Flutter) </h6>
 		</div>
@@ -117,6 +130,7 @@
 				src="./images/logistics/hypervisor-doors.png"
 				alt="Hypervisor Doors Screenshot"
 				class="lightbox-trigger"
+				style="width: 90%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> WebApp - Dock View (Angular) </h6>
 		</div>
@@ -125,11 +139,15 @@
 				src="./images/logistics/hypervisor-report.png"
 				alt="Hypervisor Report Screenshot"
 				class="lightbox-trigger"
+				style="width: 90%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> WebApp - Shift Report (Angular) </h6>
 		</div>
 	</section>
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="padding-top: var(--space-xxl)"
+	>
 		<h3>Reimagining The Logistics Process</h3>
 		<h5>
 			In early 2025, our team partnered with supply chain veterans to further
@@ -155,18 +173,23 @@
 				src="./images/logistics/graviton-metrics.png"
 				alt="Graviton Metrics Screenshot showing yard overview in Figma"
 				class="lightbox-trigger"
+				style="width: 80%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> WebApp - Yard Overview (Figma) </h6>
 		</div>
-		<div class="project-image">
+		<div
+			class="project-image"
+			style="page-break-after: always"
+		>
 			<img
 				src="./images/logistics/graviton-mobile-metrics.png"
 				alt="Graviton Mobile Metrics Screenshot showing yard overview on mobile in Figma"
 				class="lightbox-trigger"
+				style="width: 80%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> Mobile - Yard Overview (Figma) </h6>
 		</div>
-		<h5>
+		<h5 style="padding-top: var(--space-xxl)">
 			Dwell time is a critical metric for optimizing logistics operations, as it
 			directly impacts resource utilization, overall efficiency, and business
 			costs. By bringing the entire logistics process onto a unified platform,
@@ -180,6 +203,7 @@
 				src="./images/logistics/graviton-yard.png"
 				alt="Graviton Yard Screenshot showing yard heatmap view in Angular web app"
 				class="lightbox-trigger"
+				style="width: 80%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> WebApp - Yard 'Heatmap' View (Angular) </h6>
 		</div>
@@ -193,19 +217,27 @@
 			management system that leveraged geospatial data to optimize trailer
 			operations and improve overall efficiency.
 		</h5>
-		<div class="project-image">
+		<div
+			class="project-image"
+			style="page-break-after: always"
+		>
 			<img
 				src="./images/logistics/graviton-warehouse.png"
 				alt="Graviton Warehouse Screenshot showing warehouse view in Angular web app"
 				class="lightbox-trigger"
+				style="width: 80%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> WebApp - Warehouse View (Angular) </h6>
 		</div>
-		<div class="project-image">
+		<div
+			class="project-image"
+			style="padding-top: var(--space-xxl)"
+		>
 			<img
 				src="./images/logistics/graviton-fulfillment.png"
 				alt="Graviton Fulfillment Screenshot showing fulfillment view in Angular web app"
 				class="lightbox-trigger"
+				style="width: 80%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> WebApp - Fulfillment View (Angular) </h6>
 		</div>
@@ -214,6 +246,7 @@
 				src="./images/logistics/graviton-reporting.png"
 				alt="Graviton Reporting Screenshot showing reporting view in Angular web app"
 				class="lightbox-trigger"
+				style="width: 80%; margin: 0 auto"
 			/>
 			<h6 class="is-centered"> WebApp - Reporting View (Angular) </h6>
 		</div>
