--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<article class="project">
+<article
+	class="project"
+	style="padding-top: var(--space-xxl)"
+>
 	<section class="project-section">
 		<h2>Professional Summary</h2>
 		<h6>
@@ -84,7 +87,10 @@
 			</ul>
 		</div>
 
-		<div class="experience-item">
+		<div
+			class="experience-item"
+			style="page-break-after: always"
+		>
 			<h3>
 				<span class="company-logo">
 					<img
@@ -121,7 +127,10 @@
 			</ul>
 		</div>
 
-		<div class="experience-item">
+		<div
+			class="experience-item"
+			style="padding-top: var(--space-xxl)"
+		>
 			<h3>
 				<span class="company-logo">
 					<img
@@ -242,7 +251,10 @@
 			</ul>
 		</div>
 
-		<div class="experience-item">
+		<div
+			class="experience-item"
+			style="page-break-after: always"
+		>
 			<h3>
 				<span class="company-logo">
 					<img
