--- a/public-service.html
+++ b/public-service.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<article class="project">
+<article
+	class="project"
+	style="padding-top: var(--space-xxl)"
+>
 	<section class="project-intro">
 		<h2>Public Service</h2>
 		<h5>
@@ -14,6 +17,7 @@
 			src="./images/field-force/main.png"
 			alt="FieldForce Screenshot"
 			class="lightbox-trigger"
+			style="max-width: 40%"
 		/>
 		<div class="project-description">
 			<span>
@@ -84,7 +88,10 @@
 			</a>
 		</h5>
 	</section>
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="page-break-after: always"
+	>
 		<h5>
 			During the development of this project, I was also working full-time on
 			the UI Library that I'd begun while working on LandVision Connect. Due to
@@ -92,7 +99,10 @@
 			which to test out my approach to UI architecture.
 		</h5>
 	</section>
-	<div class="project-image">
+	<div
+		class="project-image"
+		style="padding-top: var(--space-xxl)"
+	>
 		<img
 			src="./images/field-force/ui-library.png"
 			alt="UI Library Screenshot"
