--- a/real-estate.html
+++ b/real-estate.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<article class="project">
+<article
+	class="project"
+	style="padding-top: var(--space-xxl)"
+>
 	<section class="project-intro">
 		<h2>Real Estate</h2>
 		<h5>
@@ -12,6 +15,7 @@
 			src="./images/lv-connect/main.png"
 			alt="LandVision Connect Screenshot"
 			class="lightbox-trigger"
+			style="max-width: 40%"
 		/>
 		<div class="project-description">
 			<span>
@@ -56,7 +60,10 @@
 			review.
 		</h5>
 	</section>
-	<div class="project-image">
+	<div
+		class="project-image"
+		style="page-break-after: always"
+	>
 		<img
 			src="./images/lv-connect/wires.png"
 			alt="Wires Screenshot"
@@ -66,7 +73,10 @@
 			Original paper-prototype (Main screen, Contact, Location, Project, Notes)
 		</h6>
 	</div>
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="padding-top: var(--space-xxl)"
+	>
 		<h5>
 			After review, the decision was made to simplify things by removing the
 			concept of 'Project'. The application become more property-focused with
@@ -115,7 +125,10 @@
 			and Ghostlab.
 		</h5>
 	</section>
-	<div class="project-image">
+	<div
+		class="project-image"
+		style="page-break-after: always"
+	>
 		<img
 			src="./images/lv-connect/hifi-1.png"
 			alt="Hi Fidelity 1 Screenshot"
@@ -125,7 +138,10 @@
 			Home Screen, Location Summary, Layers UI, App Menu
 		</h6>
 	</div>
-	<div class="project-image">
+	<div
+		class="project-image"
+		style="padding-top: var(--space-xxl)"
+	>
 		<img
 			src="./images/lv-connect/hifi-2.png"
 			alt="Hi Fidelity 2 Screenshot"
