--- a/visual-design.html
+++ b/visual-design.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <article class="project">
-	<section class="project-intro">
+	<section
+		class="project-intro"
+		style="padding-top: var(--space-xxl)"
+	>
 		<!-- Visual Design -->
 		<h2>Visual Design</h2>
 		<h5>
@@ -31,6 +34,7 @@
 				alt="Arbonne 1 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 		<div
@@ -42,6 +46,7 @@
 				alt="Arbonne 2 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 		<div
@@ -53,6 +58,7 @@
 				alt="Arbonne 3 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 	</section>
@@ -83,6 +89,7 @@
 				alt="Arbonne 1 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 		<div class="project-image">
@@ -91,6 +98,7 @@
 				alt="Arbonne 2 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 		<div class="project-image">
@@ -99,11 +107,15 @@
 				alt="Arbonne 3 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 	</section>
 	<!-- Rakuten -->
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="page-break-after: always"
+	>
 		<h5>
 			At
 			<a
@@ -118,7 +130,10 @@
 			through an internal CMS.
 		</h5>
 	</section>
-	<section class="row align-center">
+	<section
+		class="row align-center"
+		style="padding-top: var(--space-xxl)"
+	>
 		<div
 			class="project-image"
 			style="flex: 32%"
@@ -128,6 +143,7 @@
 				alt="Rakuten 1 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 		<div
@@ -139,6 +155,7 @@
 				alt="Rakuten 2 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 		<div
@@ -150,6 +167,7 @@
 				alt="Rakuten 3 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 	</section>
@@ -180,6 +198,7 @@
 				alt="Tiny Nightmares 1 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 		<div
@@ -191,6 +210,7 @@
 				alt="Tiny Nightmares 2 Screenshot"
 				class="lightbox-trigger"
 				width="100%"
+				style="width: 90%; margin: 0 auto"
 			/>
 		</div>
 	</section>
@@ -204,9 +224,13 @@
 			animation composition and timing. Upon entering the world of digital
 			animation, my tools of choice became After Effects and 3D Studio Max.
 		</h5>
+		<h5> Examples available upon request. </h5>
 	</section>
 	<!-- Tiny Nightmares -->
-	<div class="project-image">
+	<div
+		class="project-image"
+		style="page-break-after: always; display: none"
+	>
 		<video
 			width="60%"
 			poster="./images/visual-design/tn-trailer-poster.jpg"
@@ -229,7 +253,10 @@
 		<caption> Tiny Nightmares promotional trailer. </caption>
 	</div>
 	<!-- Mattel -->
-	<section class="project-section">
+	<section
+		class="project-section"
+		style="padding-top: var(--space-xxl); display: none"
+	>
 		<div class="project-image">
 			<video
 				width="60%"
