--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Google Tag Manager -->
-		<script>
-			(function (w, d, s, l, i) {
-				w[l] = w[l] || [];
-				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-				var f = d.getElementsByTagName(s)[0],
-					j = d.createElement(s),
-					dl = l != "dataLayer" ? "&l=" + l : "";
-				j.async = true;
-				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-				f.parentNode.insertBefore(j, f);
-			})(window, document, "script", "dataLayer", "GTM-NBTMMPN9");
-		</script>
-		<!-- End Google Tag Manager -->
-		<!-- Google Analytics (gtag.js) -->
+		<!-- Google tag (gtag.js) -->
 		<script
 			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-1NWQHDQ0ML"
+			src="https://www.googletagmanager.com/gtag/js?id=G-5FQVPH9Z5G"
 		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -26,7 +12,8 @@
 				dataLayer.push(arguments);
 			}
 			gtag("js", new Date());
-			gtag("config", "G-1NWQHDQ0ML");
+
+			gtag("config", "G-5FQVPH9Z5G");
 		</script>
 		<title>Greg Person - Principal UX Design Leader</title>
 		<meta charset="UTF-8" />
@@ -56,16 +43,6 @@
 		/>
 	</head>
 	<body>
-		<!-- Google Tag Manager (noscript) -->
-		<noscript>
-			<iframe
-				src="https://www.googletagmanager.com/ns.html?id=GTM-NBTMMPN9"
-				height="0"
-				width="0"
-				style="display: none; visibility: hidden"
-			></iframe>
-		</noscript>
-		<!-- End Google Tag Manager (noscript) -->
 		<header>
 			<div class="header-top">
 				<section class="header-name">
